# notes

./: OpenCV.md  README.md  ROS.md  angular_velocity_from_quaternions.py  apriltag_vs_aruco.md  authorize_ssh.sh  bash.md  docker.md  drake.md  gazebo.md  grep_bag.py  merge_bag.py  misc.md  nvidia.md  quaternion2rpy.py  start_display.sh  start_vino.sh  vim.md
cpp/: function_ptr_example.cpp
cpp_snippets/: DelayBool.cpp  FuncBool.cpp  FuncPrimitive.cpp  HardwareController.cpp  PeriodicCaller.cpp  README.md  SmartPrimitive.cpp  ThrottleFunc.cpp  TryFunc.cpp  bind_lambda.cpp  do_for.cpp  function_ptr_example.cpp  getAngularDistance.cpp
python_http/: MyHTTPServer.py  README.md
python_xmlrpc/: README.md  server.py  test_client.py
ros_interface/: simple_action_client_interface.hpp
ros_test/: CMakeLists.txt  README.md  package.xml  test_main.cpp
ros_test/launch/: run.test
ros_util/: README.md
ros_util/gazebo_tf/: CMakeLists.txt  README.md  gazebo_tf.py  package.xml
ros_util/tf_connector/: CMakeLists.txt  README.md  package.xml
ros_util/tf_connector/src/: tf_connector.cpp
rosbag_recorder/: CMakeLists.txt  README.md  package.xml
rosbag_recorder/launch/: rosbag_recorder.launch
rosbag_recorder/src/: rosbag_category.cpp  rosbag_recorder_node.cpp
standards/code-format/: code-format-guidelines.md  cpp-style-guide.md  csharp-style-guide.md  java-style-guide.md  python-style-guide.md
standards/iso12207/: iso12207.md
standards/iso26262/: iso26262.md
state_machine/: Controller.cpp  Controller.hpp  README.md  States.cpp  States.hpp
vnc/: README.md  start_display.sh  start_vino.sh  vino_3.8.1-0ubuntu1_amd64.deb  vnc4server_4.1.1+xorg4.3.0-37ubuntu5_amd64.deb  xbase-clients_7.7+1ubuntu8_all.deb  xvfb_1.15.1-0ubuntu2_amd64.deb
xmlrpc_cpp/: CMakeLists.txt
xmlrpc_server/: CMakeLists.txt  README.md
xmlrpc_server/include/: XMLRPCServer.hpp
xmlrpc_server/src/: XMLRPCServer.cpp  client_main.cpp  main.cpp  server_main.cpp
