<?xml version="1.0"?>
<package format="2">
  <name>gazebo_tf</name>
  <version>0.0.0</version>
  <description>The gazebo_tf package</description>

  <maintainer email="rufus@todo.todo">rufus</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>

