<?xml version="1.0"?>
<package format="2">
  <name>tf_connector</name>
  <version>0.0.0</version>
  <description>The tf_connector package</description>

  <maintainer email="rufus@todo.todo">rufus</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
